syntax = "proto3";

message PingRequest {
}

message PingResponse {
}

service NodeGRPC {
    rpc Ping(PingRequest) returns (PingResponse) {}
}
